[what] Add category page on mobile mode and fix size issue in chrome for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App-header {
   background-color: #DCDCDC	;
-  min-height: calc(95.5vh - 4px);
+  min-height: 100%;
   min-width: 360px;
   max-width: 720px;
   width:100%;
